# .dots

./: .gitattributes  .github  .gitignore  .gitmodules  LICENSE.md  README.md  bashrc  default.nix  flake.nix  gitconfig  nix.md  result.txt  setup.sh  vimrc
.github/: LICENSE  README.md  dependabot.yml  pull_request_template.md  template_todo.md
.github/assets/: remote.txt
.github/runner/: action.yml
.github/workflows/: cache.yml  dots-manager.yml  flake.yaml  flake.yml  iso.nix  iso.yml  sync.yml  update-flake.yml
config/: compton.cfg
config/fish/: config.fish  fish_variables
config/i3/: config  sway.config  xinitrc
config/kitty/: kitty.conf
config/xmonad/: Main.hs  xinitrc
config/yapf/: style
dot/: bashrc  dots  dots-installed  fbtermrc  gitconfig  vimrc
dot/config/: compton.cfg
dot/tmux/: nest.conf  remote.conf  tmux.conf  yank.conf
dot/vim/: custom.vim  keybindings.vim  plugins.vim  settings.vim
dot/xmonad/: Main.hs  xinitrc
dot/xvfb/: xinitrc
dots-manager/: Cargo.toml  LICENSE  README.md  flake.nix
dots-manager/install/: flake.nix  install.nix  machine.nix  main.nix  provision.sh  sensitive.nix
dots-manager/src/: config.rs  helpers.rs  lib.rs  main.rs  parse.rs  prompts.rs  utils.rs
dots-manager/src/commands/: clean.rs  install.rs  mod.rs  template.rs
fish/: config.fish  fish_variables
fish/functions/: misc.fish  review.fish  todo.fish
i3/: config  fullscreen  i3blocks-top.conf  xinitrc
kitty/: kitty.conf
nix/: common.nix  dylan.nix  fonts.nix  i3.nix  overlays.nix  sway.nix  utils.nix
nix/bootstrap/: bootstrap.nix  configuration.nix  hardware-configuration.nix
nix/common/: fonts.nix  getty.nix  harden.nix  head.nix  network.nix  pkgs.nix
nix/display/: none.nix  wayland.nix  x.nix
nix/home/: common.nix  daily-driver.nix  display.nix  dylan.nix  fb.nix  gpg.nix  i3.nix  live.nix  standalone.nix  sway.nix  user.nix  xmonad.nix
nix/machines/: brick.nix  exalt.nix  garmin-process.py  gce.nix  lambda.nix  mamba.nix  momento.nix  slug.nix  wsl.nix
nix/spoof/: flake.nix  user.nix  (+3 more)
patches/: ale.patch  apply.sh  pbtxt.vim.patch  vim-pbtxt.patch
runner/: action.yml
scripts/: clean-dots.nix.sh  create-home.nix.sh  create-install.nix.sh  create-live.nix.sh  generate-wildcard-certificate.sh  run-install.nix.sh  scripts.nix  utils.sh
tmux/: nest.conf  remote.conf  tmux.conf  tmux.config  tmuxline.conf  yank.conf
ulties/: markdown.snippets
vim/: bootstrap.vim  custom.vim  denite.vim  keybindings.vim  markdown.vim  plugins.vim  settings.vim  svg.vim
(+173 files in other folders)
