[package]
name = "dots-manager"
version = "0.1.0"
description = "Wizard for dots install"
readme = "README.md"
authors = ["madisetti <madisetti@jhu.edu>"]
license = "MIT"
repository = "https://github.com/dmadisetti/.dots/"
keywords = ["installer"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
nixpkgs-fmt = "1.3.0"
requestty = "0.5.0"
rnix = { git = 'https://github.com/AnotherGroupChat/rnix-parser', rev = "41e8090" }

clap = { version = "4.0.27", features = ["derive"] }

pgp = "0.8"
rand = "0.8"
sha-crypt = "0.4.0"

handlebars = "4.3.5"
regex = "1"
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }

qr_code = "1.1.0"

# [replace]
# "rnix:0.10.1" = { git = 'https://github.com/AnotherGroupChat/rnix-parser', branch = "bools!" }
